# py

./: .env  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: d7dfbfba6809_create_tables.py
app/: main.py
app/auth/: __init__.py
app/config/: __init__.py
app/controllers/: object_controller.py  user_controller.py
app/db/: __init__.py
app/db/mongodb/: __init__.py
app/models/: user.py
app/routers/: login.py  objects.py  users.py
app/schemas/: __init__.py  object.py  user.py
